# no-local-imports

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
no-local-imports/: main.py
no_local_imports.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_main.py
