[project]
name = "no-local-imports"
dynamic = ["version"]
description = "Pre-commit hook to ensure no local path sources exist in [tool.uv.sources]"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
no-local-imports = "no_local_imports.main:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools-scm]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
